--- a/backend/app/templates/chatroom.html
+++ b/backend/app/templates/chatroom.html
@@ -44,7 +44,7 @@
     </div>
 
     <script>
-      room = "1";
+      room = {{ room_id }} ;
       user = Math.floor(Math.random() * 100).toString();
       socket = io.connect("http://" + document.domain + ":" + location.port);
 
