feat:  Added user login feature

--- a/backend/app/templates/auth-test.html
+++ b/backend/app/templates/auth-test.html
@@ -3,6 +3,8 @@
   <head>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+    
+    <!-- jQuery cookie library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
   </head>
