--- a/backend/app/templates/auth-login.html
+++ b/backend/app/templates/auth-login.html
@@ -8,23 +8,17 @@
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
+    <!-- jQuery cookie library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col mx-auto" style="max-width: 18rem">
-          <h3>REGISTER</h3>
-          <form id="register-form" action="#">
-            <div class="form-group">
-              <label>username</label>
-              <input
-                class="form-control"
-                name="username"
-                type="text"
-                placeholder="sj bae"
-              />
-              <small>you can change username later</small>
-            </div>
+          <h3>LOGIN</h3>
+          <form id="login-form" action="#">
             <div class="form-group">
               <label>email</label>
               <input
@@ -43,14 +37,15 @@
                 placeholder="password"
               />
             </div>
-            <button type="submit" class="btn btn-primary">Sign up</button>
+            <button type="submit" class="btn btn-primary">Sign in</button>
           </form>
+          <a href="/auth/register">sign up here</a>
         </div>
       </div>
     </div>
     <script>
-      $("#register-form").submit(function (e) {
-        let formData = $("#register-form")
+      $("#login-form").submit(function (e) {
+        let formData = $("#login-form")
           .serializeArray()
           .reduce((obj, field) => {
             obj[field.name] = field.value;
@@ -59,20 +54,22 @@
 
         // 전송 // send
         $.ajax({
-          url: "/auth/register",
+          url: "/auth/login",
           type: "POST",
           data: JSON.stringify(formData),
           contentType: "application/json",
           dataType: "json",
           success: function (data) {
-            location.href = "/auth/login";
+            $.cookie("access_csrf", data["access_csrf"], { expires: 1 });
+            $.cookie("refresh_csrf", data["refresh_csrf"], { expires: 1 });
+            location.href = '/'
           },
           error: function (xhr, status, err) {
             console.log(xhr.responseJSON);
           },
         });
         // 정리 // clear
-        $("#register-form").trigger("reset");
+        $("#login-form").trigger("reset");
         return false;
       });
     </script>
