chores: Removed some temporary files
temporary files and functions include auth-protected.html and protected view function

--- a/backend/app/templates/auth-test.html
+++ b/backend/app/templates/auth-test.html
@@ -13,7 +13,7 @@
     <div><button id="register">REGISTER</button></div>
     <div><button id="login">LOGIN</button></div>
     <div><button id="logout">LOGOUT</button></div>
-    <div><a href="/auth/protected">protected</a></div>
+    <div><a href="/">protected</a></div>
     <script>
       $("#db").click(function () {
         $.ajax({
