--- a/backend/app/templates/auth-test.html
+++ b/backend/app/templates/auth-test.html
@@ -20,8 +20,8 @@
           url: "/auth/db",
           type: "POST",
           data: JSON.stringify({ test: "test" }),
-          // contentType: "application/json",
-          // dataType: "json",
+          contentType: "application/json",
+          dataType: "json",
           success: function (data) {
             console.log(data);
           },
