fix: Fix 'Method Not Allowed' in '/auth/register'

--- a/backend/app/templates/auth-login.html
+++ b/backend/app/templates/auth-login.html
@@ -39,7 +39,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Sign in</button>
           </form>
-          <a href="/auth/register">sign up here</a>
+          <a href="/auth/signup">sign up here</a>
         </div>
       </div>
     </div>
