--- a/backend/app/templates/auth-test.html
+++ b/backend/app/templates/auth-test.html
@@ -32,7 +32,7 @@
       });
       $("#register").click(function () {
         $.ajax({
-          url: "/auth/register",
+          url: "/auth/signup",
           type: "POST",
           data: JSON.stringify({
             username: "uesr",
