Add friend registering api

--- a/backend/app/templates/chat-room.html
+++ b/backend/app/templates/chat-room.html
@@ -41,6 +41,7 @@
           <button class="input-group-text" id="send" type="submit">send</button>
         </div>
       </form>
+        {% include 'component/navigation.html' %}
     </div>
 
     <script>
