refactor: add nickname field to user schema and now use username to manage friends collection

--- a/backend/app/templates/component/navigation.html
+++ b/backend/app/templates/component/navigation.html
@@ -1,18 +1,18 @@
-<div class="flex-wrap card pt-5 list-group list-group-horizontal ">
-    <div class="list-group text-center text-md-left" role="tablist">
-        <a
-                href="#tab-friends"
-                class="list-group-item list-group-item-action border-0"
-                data-toggle="list"
-        >
-            <i class="fas fa-2x fa-user"></i>
-        </a>
-        <a
-                href="#tab-chats"
-                class="list-group-item list-group-item-action border-0"
-                data-toggle="list"
-        >
-            <i class="fas fa-2x fa-comment"></i>
-        </a>
-    </div>
-</div>
+<nav class="fix-bottom list-group list-group-horizontal ">
+    <ul class="navbar text-center " role="tablist">
+        <p class="nav_item">
+            <a class="nav-link" href="#tab-friends" data-toggle="list">
+                <i class="fas fa-2x fa-user"></i>
+                <br>
+                friend
+            </a>
+        </p>
+        <p class="nav_item">
+            <a class="nav-link" href="#tab-chats" data-toggle="list">
+                <i class="fas fa-2x fa-comment"></i>
+                <br>
+                chat
+            </a>
+        </p>
+    </ul>
+</nav>
