--- a/backend/app/templates/chat-friend.html
+++ b/backend/app/templates/chat-friend.html
@@ -6,6 +6,9 @@
       <a id="friend-template" class="list-group-item list-group-item-action border-1 m-0">friend</a>
     </div>
         {% include 'component/navigation.html' %}
+        <form >
+
+        </form>
   </div>
   <div class="col-sm-8 d-flex flex-column pr-0">
     <!-- 친구 프로필 시작 -->
