--- a/backend/app/templates/auth-signup.html
+++ b/backend/app/templates/auth-signup.html
@@ -43,6 +43,15 @@
                 placeholder="password"
               />
             </div>
+            <div class="form-group">
+              <label>nickname</label>
+              <input
+                class="form-control"
+                name="nickname"
+                type="nickname"
+                placeholder="nickname"
+              />
+            </div>
             <button type="submit" class="btn btn-primary">Sign up</button>
           </form>
         </div>
